[metadata]
name = qts
version = attr: qts.__version__
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT
url = https://github.com/altendky/qts
project_urls =
    Documentation = https://qts.readthedocs.io/
    Issues = https://github.com/python-qt-tools/qts/issues
    Repository = https://github.com/python-qt-tools/qts
    Tests = https://github.com/python-qt-tools/qts/actions?query=branch%%3Amain
    Coverage = https://codecov.io/gh/python-qt-tools/qts
    Distribution = https://pypi.org/project/qts
description = a thin compatibility layer for Python code to use Qt through various wrappers
long_description = file: README.rst
keywords = GUI, Qt, PyQt5, PySide2, PyQt6, PySide6
classifiers =
        License :: OSI Approved :: MIT License
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Topic :: Software Development :: User Interfaces

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:

[options.entry_points]
console_scripts =
    qts = qts._cli:cli

[options.extras_require]
pyqt5 =
    pyqt5 ~=5.15
pyside2 =
    pyside2 ~= 5.15
pyqt6 =
    pyqt6 ~= 6.0
pyside6 =
    pyside6 ~= 6.0
cli =
    click ~= 8.0
p_checks =
    black == 21.5b2
    check-manifest ~= 0.46.0
    flake8 ~= 3.8
    mypy == 0.790
    %(s_pytest)s
    %(s_towncrier)s
p_docs =
    sphinx ~= 4.0
    sphinx-autodoc-typehints ~= 1.11
    sphinx-qt-documentation ~= 0.3.0
    sphinx_rtd_theme ~= 0.5.0
    %(s_towncrier)s
p_tests =
    %(cli)s
    coverage ~= 5.5
    %(s_pytest)s
    pytest-cov ~= 2.12
    pytest-xvfb ~= 2.0; sys_platform == "linux"
s_pytest =
    pytest ~= 6.2
s_towncrier =
    towncrier ~= 21.3

[options.packages.find]
where = src

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = src/qts/_version.py
versionfile_build = qts/_version.py
tag_prefix = ''
